added asset entity, fixture loader and s3 bucket config

--- a/api/.env
+++ b/api/.env
@@ -42,3 +42,10 @@ MERCURE_PUBLISH_URL=https://mercure/.well-known/mercure
 # The default token is signed with the secret key: !ChangeMe!
 MERCURE_JWT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJtZXJjdXJlIjp7InB1Ymxpc2giOltdfX0.Oo0yg7y4yMa1vr_bziltxuTCqb8JVHKxp-f_FwwOim0
 ###< symfony/mercure-bundle ###
+
+###> aws/aws-sdk-php-symfony ###
+AWS_KEY=not-a-real-key
+AWS_SECRET=@@not-a-real-secret
+###< aws/aws-sdk-php-symfony ###
+AWS_BUCKET=bucket-here
+AWS_REGION=region-here
