--- a/api/config/services.yaml
+++ b/api/config/services.yaml
@@ -25,3 +25,10 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    App\Repository\S3Repository:
+        arguments:
+            $s3Region: '%env(resolve:AWS_REGION)%'
+            $s3BucketName: '%env(resolve:AWS_BUCKET)%'
+            $s3Key: '%env(resolve:AWS_KEY)%'
+            $s3Secret: '%env(resolve:AWS_SECRET)%'
