--- a/api/composer.json
+++ b/api/composer.json
@@ -20,7 +20,9 @@
     "require-dev": {
         "api-platform/schema-generator": "^2.1",
         "symfony/maker-bundle": "^1.11",
-        "symfony/profiler-pack": "^1.0"
+        "symfony/profiler-pack": "^1.0",
+        "symfony/test-pack": "^1.0",
+        "vimeo/psalm": "^3.12"
     },
     "conflict": {
         "symfony/symfony": "*"
