--- a/api/composer.json
+++ b/api/composer.json
@@ -19,6 +19,8 @@
     },
     "require-dev": {
         "api-platform/schema-generator": "^2.1",
+        "justinrainbow/json-schema": "^5.2",
+        "symfony/http-client": "5.0.*",
         "symfony/maker-bundle": "^1.11",
         "symfony/profiler-pack": "^1.0",
         "symfony/test-pack": "^1.0",
