Added jwt authentication

--- a/api/.env
+++ b/api/.env
@@ -49,3 +49,9 @@ AWS_SECRET=@@not-a-real-secret
 ###< aws/aws-sdk-php-symfony ###
 AWS_BUCKET=bucket-here
 AWS_REGION=region-here
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=25f565590c1828cc7fda710d5e7b7d82
+###< lexik/jwt-authentication-bundle ###
