--- a/api/composer.json
+++ b/api/composer.json
@@ -9,6 +9,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "lexik/jwt-authentication-bundle": "^2.8",
         "ramsey/uuid-doctrine": "^1.6",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
