--- a/api/composer.json
+++ b/api/composer.json
@@ -17,7 +17,8 @@
         "symfony/framework-bundle": "5.0.*",
         "symfony/mercure-bundle": "^0.2",
         "symfony/monolog-bundle": "^3.5",
-        "symfony/yaml": "5.0.*"
+        "symfony/yaml": "5.0.*",
+        "vlucas/phpdotenv": "^5.0"
     },
     "require-dev": {
         "api-platform/schema-generator": "^2.1",
