--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -1,41 +1,82 @@
-# api/config/packages/security.yaml
+## api/config/packages/security.yaml
+#security:
+#    encoders:
+#        App\Entity\User:
+#            algorithm: argon2i
+#
+#    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+#    providers:
+#        jwt:
+#            lexik_jwt: ~
+#
+#    firewalls:
+#        dev:
+#            pattern: ^/_(profiler|wdt)
+#            security: false
+#        main:
+#            stateless: true
+#            anonymous: true
+#            provider: jwt
+#            guard:
+#                authenticators:
+#                    - lexik_jwt_authentication.jwt_token_authenticator
+#        login:
+#            pattern:  ^/api/login
+#            stateless: true
+#            anonymous: true
+#            json_login:
+#                check_path:               /api/login_check
+#                success_handler:          lexik_jwt_authentication.handler.authentication_success
+#                failure_handler:          lexik_jwt_authentication.handler.authentication_failure
+#                
+#
+#    access_control:
+#        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+#        - { path: ^/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allows accessing the Swagger UI
+#        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allows registration
+#        - { path: ^/authentication_token, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+#       
+#    
+
+
 security:
     encoders:
         App\Entity\User:
             algorithm: argon2i
 
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        jwt:
-            lexik_jwt: ~
+        entity_provider:
+            entity:
+                class: App\Entity\User
+                property: username
 
     firewalls:
         dev:
             pattern: ^/_(profiler|wdt)
             security: false
-        main:
+
+        assets:
+            pattern:   ^/assets
             stateless: true
             anonymous: true
-            provider: jwt
+            provider: entity_provider
             guard:
                 authenticators:
                     - lexik_jwt_authentication.jwt_token_authenticator
+            
         login:
             pattern:  ^/api/login
             stateless: true
             anonymous: true
-            provider: jwt
+            provider: entity_provider
             json_login:
                 check_path:               /api/login
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
-                
 
     access_control:
-        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/docs, roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allows accessing the Swagger UI
-        - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allows registration
-        - { path: ^/authentication_token, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/, roles: IS_AUTHENTICATED_FULLY }
-       
-    
+        - { path: ^/docs,             roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allows accessing the Swagger UI
+        - { path: ^/api/login,        roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/register,     roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/assets,           roles: IS_AUTHENTICATED_FULLY }
+        
