--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -65,18 +65,18 @@ security:
                     - lexik_jwt_authentication.jwt_token_authenticator
             
         login:
-            pattern:  ^/api/login
+            pattern:  ^/jwt/login
             stateless: true
             anonymous: true
             provider: entity_provider
             json_login:
-                check_path:               /api/login
+                check_path:               /jwt/login
                 success_handler:          lexik_jwt_authentication.handler.authentication_success
                 failure_handler:          lexik_jwt_authentication.handler.authentication_failure
 
     access_control:
         - { path: ^/docs,             roles: IS_AUTHENTICATED_ANONYMOUSLY } # Allows accessing the Swagger UI
-        - { path: ^/api/login,        roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/register,     roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/jwt/login,        roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/jwt/register,     roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/assets,           roles: IS_AUTHENTICATED_FULLY }
         
